<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/icon_popup_menu_bg"
    android:orientation="vertical" >
    
     <LinearLayout android:id="@+id/start_dinner"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal" 
        android:background="@drawable/bg_default_button_selector">
        <TextView android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#595d5f"
            android:text="@string/start_dinner" />
    </LinearLayout>  
    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

    <LinearLayout android:id="@+id/scanning"
        android:layout_width="match_parent"
        android:layout_height="43dp" 
        android:orientation="horizontal" 
        android:background="@drawable/bg_default_button_selector">
        <TextView android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center" 
            android:textSize="15sp"
            android:textColor="#595d5f"
            android:text="@string/scanning" />
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#eeeeee" />

    <LinearLayout android:id="@+id/payment"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_default_button_selector" >
        <TextView android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#595d5f"
            android:text="@string/payment" />
    </LinearLayout>
    <View android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#eeeeee" />
    
    <LinearLayout android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_default_button_selector" >
        <TextView android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#595d5f"
            android:text="@string/about" />
    </LinearLayout>

</LinearLayout>
