<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="55dp"
    android:background="#FFFFFF"
    android:orientation="horizontal">
	
        <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:background="#FFFFFF">
        <View android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCC" />
        <!-- ************************ index 首页layout ************************** -->
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent" 
            android:baselineAligned="false">
            <LinearLayout android:id="@+id/ll_home"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="vertical" 
                android:onClick="showIndex">
                <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <ImageView android:id="@+id/index_icon_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/index_select"
                        android:contentDescription="@null" />
                    <ImageView android:id="@+id/index_icon_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/index_normal"
                        android:contentDescription="@null" />
                </RelativeLayout>
                <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                    <TextView android:id="@+id/index_text_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/index" 
                        android:textColor="#fe5e12"
                        android:textSize="12sp" /> 
                    <TextView android:id="@+id/index_text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/index"
                        android:textColor="#999999"
                        android:textSize="12sp" />
                </RelativeLayout>
            </LinearLayout>
            
            
            <!-- ************************find 发现layout************************** -->
            <LinearLayout android:id="@+id/ll_friend"
                android:layout_width="0dp"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" 
                android:onClick="showFind"> 
                <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content" > 
                    <ImageView android:id="@+id/find_icon_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/find_select"
                        android:contentDescription="@null" /> 
                    <ImageView  android:id="@+id/find_icon_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/find_normal"
                        android:contentDescription="@null"/>
                </RelativeLayout> 
                <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content" > 
                    <TextView android:id="@+id/find_text_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find" 
                        android:textColor="#fe5e12"
                        android:textSize="12sp"  /> 
                    <TextView android:id="@+id/find_text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find" 
                        android:textColor="#999999"
                        android:textSize="12sp"/>
                </RelativeLayout>
            </LinearLayout>
            
            <!-- ************************my 我的layout************************** -->
            <LinearLayout android:id="@+id/ll_setting"
                android:layout_width="0dp"
                android:layout_marginTop="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" 
                android:onClick="showMy"> 
                <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content" > 
                    <ImageView android:id="@+id/me_icon_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/me_select"
                        android:contentDescription="@null"/> 
                    <ImageView android:id="@+id/me_icon_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/me_normal"
                        android:contentDescription="@null" />
                </RelativeLayout> 
                <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content" > 
                    <TextView android:id="@+id/me_text_select"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my" 
                        android:textColor="#fe5e12"
                        android:textSize="12sp"/> 
                    <TextView  android:id="@+id/me_text_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my" 
                        android:textColor="#999999"
                        android:textSize="12sp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>

</LinearLayout>
